Fix IT tests Remove soon to be deprecated code